--- a/web/pgadmin/static/scss/resources/dark/_theme.variables.scss
+++ b/web/pgadmin/static/scss/resources/dark/_theme.variables.scss
@@ -6,7 +6,7 @@ $color-fg: #d4d4d4;
 
 $color-primary: #234d6e;
 $color-primary-fg: $color-fg;
-$color-primary-light: #536270;
+$color-primary-light: #323E43;
 $color-primary-light-fg: $color-primary-fg;
 $color-primary-dark: #15354f;
 
@@ -17,7 +17,7 @@ $color-danger-fg: $white;
 $color-danger-light: #914649;
 $color-danger-lighter: #212121;
 
-$color-success: #43a047;
+$color-success: #26852B;
 $color-success-fg: $black;
 $color-success-light: #2B472C;
 
@@ -35,7 +35,7 @@ $color-brand: #1b71b5;
 $border-color: #4a4a4a;
 $shadow-base-color: #111111;
 
-$text-muted: #6b6b6b;
+$text-muted: #8A8A8A;
 $input-bg: $color-bg;
 $input-color: $color-fg;
 $input-border-color: #6b6b6b;
